@@ -1,6 +1,8 @@
 caputils-0.7.3
 --------------
 
+	* change: adding a third library (libcap_stream) which deals only with
+	          the stream. libcap_utils is utility functions only.
 	* change: rename ethaton.c to utils.c
 	* change: Moving stream_addr_t functions to a new source file: address.c
 	* change: Renamed struct destination_t to stream_addr_t
